apps/radar/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: radar
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radar
  namespace: radar
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radar.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: radar
          port: 9280
  tls:
    secretName: radar-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radar-http
  namespace: radar
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radar.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: radar
          port: 9280
